--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,107 @@
-faiss-cpu
-langchain-core
-langchain
-langchain-community
-langchain-openai
-langchain-groq
-streamlit
-python-dotenv
-pypdf
-html2text
-streamlit
-unidecode
-docx2txt
-streamlit_authenticator
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+async-timeout==4.0.3
+attrs==24.2.0
+bcrypt==4.2.1
+blinker==1.9.0
+cachetools==5.5.0
+captcha==0.6.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+dataclasses-json==0.6.7
+distro==1.9.0
+dnspython==2.7.0
+docx2txt==0.8
+email-validator==2.2.0
+exceptiongroup==1.2.2
+extra-streamlit-components==0.1.71
+faiss-cpu==1.9.0.post1
+fastapi==0.115.5
+fastapi-cli==0.0.5
+frozenlist==1.5.0
+gitdb==4.0.11
+GitPython==3.1.43
+groq==0.12.0
+h11==0.14.0
+html2text==2024.2.26
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.27.2
+httpx-sse==0.4.0
+idna==3.10
+jinja2==3.1.4
+jiter==0.7.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+langchain==0.3.8
+langchain-community==0.3.8
+langchain-core==0.3.21
+langchain-groq==0.2.1
+langchain-openai==0.2.9
+langchain-text-splitters==0.3.2
+langsmith==0.1.145
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+mdurl==0.1.2
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.14.2
+numpy==1.26.4
+openai==1.55.0
+orjson==3.10.12
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+propcache==0.2.0
+protobuf==5.28.3
+pyarrow==18.0.0
+pydantic==2.10.1
+pydantic-core==2.27.1
+pydantic-settings==2.6.1
+pydeck==0.9.1
+pygments==2.18.0
+PyJWT==2.10.0
+pypdf==5.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.17
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.21.0
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+starlette==0.41.3
+streamlit==1.40.1
+streamlit-authenticator==0.4.1
+tenacity==9.0.0
+tiktoken==0.8.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.0
+typer==0.13.1
+typing-extensions==4.12.2
+typing-inspect==0.9.0
+tzdata==2024.2
+Unidecode==1.3.8
+urllib3==2.2.3
+uvicorn==0.32.1
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==14.1
+yarl==1.18.0
